--- a/Prevu.Synoptics.V3085_Anviplas/P430.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P430.xaml
@@ -227,9 +227,9 @@
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="432-01-MA1" Canvas.Left="945" Canvas.Top="460"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="430-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1031" Canvas.Top="365"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="430-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1031" Canvas.Top="367"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="431-01-MA1" Canvas.Left="711" Canvas.Top="462"/>
@@ -271,9 +271,11 @@
             ComponentName="420-DISCHARGE" Canvas.Left="481" Canvas.Top="592"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="430-DISCHARGE-1" Canvas.Left="864" Canvas.Top="727"/>
+            ComponentName="430a-DISCHARGE" Canvas.Left="864" Canvas.Top="727"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="430-DISCHARGE-2" Canvas.Left="1102" Canvas.Top="730"/>
+            ComponentName="430b-DISCHARGE" Canvas.Left="1102" Canvas.Top="730"/>
+    <Labels:DeviceLabel 
+      ComponentName="430-42-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1111" Canvas.Top="180" HorizontalAlignment="Left" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
