--- a/Prevu.Synoptics.V3085_Anviplas/P474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P474.xaml
@@ -9,133 +9,137 @@
              xmlns:FiltroPressa="clr-namespace:Prevu.Drawings.Machines.FiltroPressa;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P474" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="310" StatusComponent="490-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="866" Canvas.Top="707"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="108" StatusComponent="492-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1210" Canvas.Top="701"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1162" Canvas.Top="656">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="132" StatusComponent="474-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="803" Canvas.Top="645">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="470-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="695" Canvas.Top="264">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="245" StatusComponent="470-01-MA1" PipeHeight="Medium" Canvas.Left="504" Canvas.Top="220"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="151" Canvas.Top="63"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="147" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" Canvas.Left="216" Canvas.Top="283"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="71" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="326" Canvas.Top="250">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Color="Air" StatusComponent="474-23-CV1" VisibilityComponent="" Canvas.Left="882" Canvas.Top="508"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="36" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="985" Canvas.Top="508"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Color="Air" StatusComponent="474-22-CV1" VisibilityComponent="" Canvas.Left="882" Canvas.Top="436"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="987" Canvas.Top="436"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Color="Air" StatusComponent="474-21-CV1" VisibilityComponent="" Canvas.Left="882" Canvas.Top="368"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="987" Canvas.Top="368"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" Color="Air" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" StatusComponent="474-41-PT1" Canvas.Left="910" Canvas.Top="401">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1131" Canvas.Top="627"/>
-        <Machines:V01_WCE_Centrifuge Canvas.Left="302" Canvas.Top="43" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Blowers:VT_CMM_BlowerAirCompressor VerticalAlignment="Top" Height="54" Canvas.Left="1166" Canvas.Top="685" HorizontalAlignment="Center"/>
-        <Machines:V01_FP_FiltroPressa_w3Screw Canvas.Left="615" Canvas.Top="265" Height="365" Width="372" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="489"/>
-        <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="417"/>
-        <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="349"/>
-        <Rectangle HorizontalAlignment="Center" Height="35" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="1018" Canvas.Top="263"/>
-        <Ellipse HorizontalAlignment="Center" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1011" Canvas.Top="287"/>
-        <Labels:JumpLabel 
+  <Canvas>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="310" StatusComponent="490-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="866" Canvas.Top="707"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="108" StatusComponent="492-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1210" Canvas.Top="701"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1162" Canvas.Top="656">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="132" StatusComponent="474-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="803" Canvas.Top="645">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="470-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="695" Canvas.Top="264">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="245" StatusComponent="470-01-MA1" PipeHeight="Medium" Canvas.Left="504" Canvas.Top="220"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="151" Canvas.Top="63"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="147" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" Canvas.Left="216" Canvas.Top="283"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="71" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="326" Canvas.Top="250">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Color="Air" StatusComponent="474-23-CV1" VisibilityComponent="" Canvas.Left="882" Canvas.Top="508"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="36" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="985" Canvas.Top="508"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Color="Air" StatusComponent="474-22-CV1" VisibilityComponent="" Canvas.Left="882" Canvas.Top="436"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="987" Canvas.Top="436"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Color="Air" StatusComponent="474-21-CV1" VisibilityComponent="" Canvas.Left="882" Canvas.Top="368"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="987" Canvas.Top="368"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" Color="Air" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" StatusComponent="474-41-PT1" Canvas.Left="910" Canvas.Top="401">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1131" Canvas.Top="627"/>
+    <Machines:V01_WCE_Centrifuge Canvas.Left="302" Canvas.Top="43" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Blowers:VT_CMM_BlowerAirCompressor VerticalAlignment="Top" Height="54" Canvas.Left="1166" Canvas.Top="685" HorizontalAlignment="Center"/>
+    <Machines:V01_FP_FiltroPressa_w3Screw Canvas.Left="615" Canvas.Top="265" Height="365" Width="372" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="489"/>
+    <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="417"/>
+    <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="349"/>
+    <Rectangle HorizontalAlignment="Center" Height="35" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="1018" Canvas.Top="263"/>
+    <Ellipse HorizontalAlignment="Center" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1011" Canvas.Top="287"/>
+    <Labels:JumpLabel 
             JumpFromLabel="492-21-CV1" Canvas.Left="1049" Canvas.Top="601" HorizontalAlignment="Left" VerticalAlignment="Center" JumpToLabel="482-21-CV1"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
+    <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="492-01-MA1" 
             JumpToLabel="520-01-MA1" Canvas.Left="1277" Canvas.Top="678"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
+    <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="470-01-MA1" 
             JumpToLabel="430-01-MA1" Canvas.Left="121" Canvas.Top="32"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
+    <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="470-01-MA1" 
             JumpToLabel="444-01-MA1" Direction="Left" Canvas.Left="177" Canvas.Top="250"/>
-        <Labels:DetailsLabel ComponentName="474-VIEW" DetailsPageName="D474" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="888" Canvas.Top="262" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="492-01-MA1" Canvas.Left="1150" Canvas.Top="748"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
             ComponentName="470-01-MA1" Canvas.Left="525" Canvas.Top="53"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="474-23-CV1" Canvas.Left="1034" Canvas.Top="485"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
 		ComponentName="474-F-PRESS" Canvas.Left="593" Canvas.Top="262"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="474-01-MA1" Canvas.Left="593" Canvas.Top="344"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="474-02-MA1" Canvas.Left="593" Canvas.Top="413"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="474-03-MA1" Canvas.Left="593" Canvas.Top="485"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="474-04-MA1" Canvas.Left="725" Canvas.Top="562"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="474-22-CV1" Canvas.Left="1034" Canvas.Top="413"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="474-21-CV1" Canvas.Left="1034" Canvas.Top="344"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="474-41-PT1" Canvas.Left="975" Canvas.Top="217"/>
-        <Labels:DeviceLabel 
-            ComponentName="474-61-LEV" Canvas.Left="790" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Canvas.Left="854" Canvas.Top="701" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
+    <Machines:SCW_ScrewConveyor_straight Canvas.Left="854" Canvas.Top="701" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
             ComponentName="490-01-MA1" Canvas.Left="854" Canvas.Top="726" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
           ComponentName="474-20-VB1" Canvas.Left="1140" Canvas.Top="344" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
         ComponentName="474-01-YA1" Canvas.Left="725" Canvas.Top="631" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    </Canvas>
+    <Labels:DeviceLabel 
+      ComponentName="474-05-MA1" Canvas.Left="801" Canvas.Top="193" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
+      ComponentName="474-05-MA2" Canvas.Left="801" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DetailsLabel ComponentName="474-VIEW" DetailsPageName="D464" HideComponentName="True" Canvas.Left="693" Canvas.Top="151" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
+      ComponentName="474-61-LEV" Canvas.Left="593" Canvas.Top="151" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  </Canvas>
 </UserControl>
