--- a/Prevu.Synoptics.V3085_Anviplas/P464.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P464.xaml
@@ -105,7 +105,7 @@
             VerticalAlignment="Center" 
             JumpFromLabel="460-01-MA1" 
             JumpToLabel="444-01-MA1" Direction="Left" Canvas.Left="177" Canvas.Top="250"/>
-    <Labels:DetailsLabel ComponentName="464-VIEW" DetailsPageName="D464" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="888" Canvas.Top="262" VerticalAlignment="Center"/>
+    <Labels:DetailsLabel ComponentName="464-VIEW" DetailsPageName="D464" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="693" Canvas.Top="151" VerticalAlignment="Center"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="482-01-MA1" Canvas.Left="1150" Canvas.Top="748"/>
@@ -143,13 +143,17 @@
             VerticalAlignment="Top" 
             ComponentName="464-41-PT1" Canvas.Left="975" Canvas.Top="217"/>
     <Labels:DeviceLabel 
-            ComponentName="464-61-LEV" Canvas.Left="790" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="464-61-LEV" Canvas.Left="593" Canvas.Top="151" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Machines:SCW_ScrewConveyor_straight Canvas.Left="854" Canvas.Top="701"/>
     <Labels:DeviceLabel 
             ComponentName="480-01-MA1" Canvas.Left="854" Canvas.Top="726" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
           ComponentName="464-20-VB1" Canvas.Left="1140" Canvas.Top="344" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
         ComponentName="464-01-YA1" Canvas.Left="725" Canvas.Top="631" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    </Canvas>
+    <Labels:DeviceLabel 
+      ComponentName="464-05-MA1" Canvas.Left="801" Canvas.Top="193" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel 
+      ComponentName="464-05-MA2" Canvas.Left="801" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+  </Canvas>
 </UserControl>
